Added JUnit Jar

--- a/.classpath
+++ b/.classpath
@@ -87,5 +87,6 @@
 	<classpathentry kind="lib" path="C:/Salenium/selenium-2.48.2/selenium-java-2.48.2-srcs.jar"/>
 	<classpathentry kind="lib" path="C:/Salenium/selenium-2.48.2/selenium-server-standalone-2.48.2.jar"/>
 	<classpathentry kind="var" path="M2_REPO"/>
+	<classpathentry kind="lib" path="C:/Salenium/Junit/junit-4.11.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
